[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[profile.test]
opt-level = 3

[dependencies]
actix-web = "4.5.1"
derive_more = "0.99.17"
rand = "0.8.5"
scanf = "1.2.1"
serde = "1.0.200"
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "time",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.37.0", features = ["test-util", "tokio-macros", "full"] }
